# MasterProjectHandin2

./: .gitignore  CMakeLists.txt  README.md  gz_stats_script.sh  package.xml  paths.py  standalone_rtf_monitor.py
behavior_trees/: custom_navigate_with_wait_first.xml
config/: camera.rviz  flowgrid_test.rviz  humans_waypoint_graph.json  humans_waypoint_graph_bigmap.json  humans_waypoint_graph_prev.json  improved_multibot_rviz_config.rviz  main.rviz  mapper_params_online_async.yaml  multi_robot_nav2_params.yaml  multibot_rviz_config.rviz  nav2_params.yaml  paths.json  paths_bigmap.json  robot_waypoint_graph.json  robot_waypoint_graph_bigmap.json  view_bot.rviz
description/: arguments.xacro  constants.xacro  intel_d435.urdf.xacro  multibot_serena.urdf.xacro  primitives.xacro  sensors.xacro  serena.urdf.xacro  wheels.xacro
launch/: coordinated_path_planning.launch.py  improved_multi_robot_localization.launch.py  launch_sim.launch.py  localization_launch.py  main.launch.py  master_launch.py  master_launch_multibot.launch.py  multibot_flowgrid_launch.py  multibot_launch_sim.launch.py  multibot_master_launch.py  multibot_navigation.launch.py  multibot_path_planning.launch.py  multibot_rsp.launch.py  multibot_yolo_visualizer_launch.py  navigation_launch.py  reset_sim.launch.py  rsp.launch.py  start_mission.launch.py
map_tuning/: map.pgm  map_cleaned_map.yaml  map_tuning.py
map_tuning/results/1/: threshold_analysis.txt  threshold_recommendations.txt
maps/: map_humans.pgm
models/bilka_odense/: bilka_world_map.stl  bilka_world_map_full.stl  bilka_world_map_trimmed.stl
models/human_cylinder/: model.sdf
scripts/: Astar_pathplanner.py  database_handler.py  flowgrid.py  gazebo_performance_monitor.py  map_cleaner.py  map_processor.py  mission_completion_handler.py  mission_monitor.py  multibot_coordinator.py  multibot_flowgrid.py  multibot_human_detection_aggregator.py  multibot_path_planner.py  multibot_test.py  multibot_waypoint_updater.py  multibot_yolo_visualizer.py  scan_collector.py  spawn_boxes.py  spawn_humans.py  test.py  test_flowgrid.py  test_human.py  waypoint_maker.py  waypoint_updater.py  waypoints.py  yolo_visualizer.py
srv/: AddWaypoint.srv  NavigateToWaypoint.srv  RemoveWaypoint.srv  UpdateWaypointCost.srv
t_map_figures/: map_figures.py  refined_map.pgm  updated_map.pgm
test_confidence/: confidence_tester.py
test_confidence/results/: confidence_map_focused_data.npy
test_map/: map.yaml  map_cleaned_map_1.pgm  map_cleaned_map_2.pgm  map_cleaned_map_3.pgm  map_cleaned_map_4.pgm  map_cleaned_map_5.pgm  map_diff.py  mpg_IoU.py
test_map/results/: gt_vs_updated_roi_metrics.txt  map_comparison_summary.txt  metric_changes_summary.txt  summary_improvements.txt
test_map/results/1/: first_vs_last_metrics.txt  map_cleaned_map_1_metrics.txt  map_cleaned_map_2_metrics.txt  map_cleaned_map_3_metrics.txt  map_cleaned_map_5_metrics.txt
test_map/results/2/: map_comparison_summary.txt  metric_changes_summary.txt  relative_improvement_summary.txt
test_performance/: gazebo_rtf_log_1.csv  gazebo_rtf_log_2.csv  performance_analisys.py
test_performance/results/: gazebo_rtf_log_1_summary.txt  gazebo_rtf_log_2_summary.txt
